<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/loginParent"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/cartBtn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="8dp"
            android:src="@drawable/ic_shopping_cart_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            android:text="@string/app_name"
            android:textColor="@color/textBlackColor"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="8dp"
            android:src="@drawable/ic_sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            android:text="@string/login"
            android:textColor="@color/textBlackColor"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="8dp"
            android:src="@drawable/ic_sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            android:text="@string/register"
            android:textColor="@color/textBlackColor"
            android:textSize="13sp" />

    </LinearLayout>
</LinearLayout>