<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundScreens"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/include"
        layout="@layout/green_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="120dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/confirm_phone_number"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                fontPath="fonts/GE_SS_Two_Light.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/enter_code_sent_to_phone"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_email_code"
                android:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_background"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_margin="1dp"
                    android:background="@color/colorPrimary"
                    android:padding="4dp"
                    android:src="@drawable/ic_password"
                    android:tint="@android:color/white" />

                <EditText
                    android:id="@+id/confirm_phone_code_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    fontPath="fonts/Tajawal-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textAlignment="viewStart"
                    android:hint="@string/enter_code"
                    android:inputType="text"
                    android:padding="4dp"
                    android:textSize="16sp"/>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/confirm_phone_code_continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorPrimary"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_progress"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/confirm_phone_code_resent_code_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/colorPrimary"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resent_code"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:textStyle="bold"/>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>